--- a/named-refused.conf
+++ b/named-refused.conf
@@ -1,5 +1,5 @@
 # Fail2Ban filter file for named (bind9).
-#
+# /etc/fail2ban/filter.d/named-refused.conf
 
 # This filter blocks attacks against named (bind9) however it requires special
 # configuration on bind.
